--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
-    Hello world!
+    <a href="https://github.com/AIn0n/PUM/blob/master/lab1/index.html">html</a>
+    <a href="https://github.com/AIn0n/PUM/blob/master/lab1/">kod</a>
 </html>
