--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,5 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <a href="https://github.com/AIn0n/PUM/blob/master/lab1/index.html">html</a>
-    <a href="https://github.com/AIn0n/PUM/blob/master/lab1/">kod</a>
+    <body>
+        <a href="https://github.com/AIn0n/PUM/blob/master/lab1/index.html">html</a>
+        <a href="https://github.com/AIn0n/PUM/blob/master/lab1/">kod</a>
+        <canvas id="myCanvas" width="800" height="600">
+            <script>
+                var canvas = document.getElementById("myCanvas");
+                var ctx = canvas.getContext("2d");
+
+                setInterval(changeColor, 1000);
+
+                var boolean = true;
+                function changeColor() {
+                    ctx.beginPath();
+                    ctx.arc(canvas.clientWidth / 2, canvas.clientHeight / 2 , 40, 0, 2 * Math.PI);
+                    ctx.stroke();
+                    ctx.fillStyle(boolean ? "green" : "blue");
+                    boolean = !boolean;
+                    ctx.fill();
+                }
+            </script>
+        </canvas>
+    </body>
 </html>
