--- a/lab2/index.html
+++ b/lab2/index.html
@@ -19,10 +19,14 @@
                         canvas.clientHeight - calcOff,
                         stepOffset);
                     ctx.stroke();
-                    if (stepNumber < NUMBER_OF_STEPS)
+                    if (stepNumber < NUMBER_OF_STEPS) {
                         setTimeout(() => {
-                            requestAnimationFrame(() => {drawStep(stepNumber + 1)});
+                            requestAnimationFrame(()=>{drawStep(stepNumber + 1)});
                         }, 1000);
+                    } else {
+                        requestAnimationFrame(moveBall);
+                    }
+                        
                 }
 
                 function DrawStairs(stepNumber) {
@@ -45,7 +49,6 @@
                 }
 
                 const radius = 40;
-                var ballPosX = ctx.clientWidth, ballPosY = 40;
                 function drawBall(posX, posY) {
                     ctx.save();
                     ctx.beginPath();
@@ -53,8 +56,16 @@
                     ctx.fill();
                     ctx.stroke();
                 }
-                //requestAnimationFrame(() => {drawStep(1)});
-                DrawStairs(1);
+
+                var ballPosX = canvas.clientWidth - radius, ballPosY = radius;
+                function moveBall() {
+                    drawBall(ballPosX, ballPosY);
+                    ballPosX -= 1;
+                    requestAnimationFrame(moveBall);
+                }
+
+                requestAnimationFrame(() => {drawStep(1)});
+                
             </script>
         </canvas>
     </body>
