--- a/lab2/index.html
+++ b/lab2/index.html
@@ -29,23 +29,19 @@
                         
                 }
 
-                function DrawStairs(stepNumber) {
+                function DrawStairs() {
                     ctx.save();
                     ctx.beginPath();
                     ctx.fillStyle = "red";
-                    ctx.fill();
-                    const calcOff = stepOffset * stepNumber;
-                    ctx.fillRect(
+                    for (var i = 0; i < NUMBER_OF_STEPS + 1; ++i) {
+                        const calcOff = stepOffset * i;
+                        ctx.fillRect(
                         calcOff,
                         canvas.clientHeight - calcOff,
                         canvas.clientHeight - calcOff,
                         stepOffset);
-                    
-                    if (stepNumber < NUMBER_OF_STEPS) {
-                        DrawStairs(stepNumber + 1);
-                    } else {
-                        ctx.stroke();
                     }
+                    ctx.stroke();
                 }
 
                 const radius = 40;
@@ -59,6 +55,8 @@
 
                 var ballPosX = canvas.clientWidth - radius, ballPosY = radius;
                 function moveBall() {
+                    ctx.clearRect(0, 0, canvas.clientWidth, canvas.clientHeight);
+                    DrawStairs();
                     drawBall(ballPosX, ballPosY);
                     ballPosX -= 1;
                     requestAnimationFrame(moveBall);
