--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,24 +1,110 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <a href="https://github.com/AIn0n/PUM/blob/master/lab1/index.html">html</a>
-        <a href="https://github.com/AIn0n/PUM/blob/master/lab1/">kod</a>
         <canvas id="myCanvas" width="800" height="600">
             <script>
                 var canvas = document.getElementById("myCanvas");
                 var ctx = canvas.getContext("2d");
 
-                var boolean = true;
-                function changeColor() {
+                var playerPosition = canvas.clientWidth / 2;
+                const velocity = 30;
+                function drawRectangle(posX, posY, sizeX, sizeY, ctx)
+                {
+                    ctx.beginPath();
+                    ctx.fillRect(posX, posY, sizeX, sizeY);
+                    ctx.fillStyle = "red";
+                    ctx.stroke();
+                }
+                window.addEventListener('keydown', (event)=> {
+                    if (event.defaultPrevented) { return; }
+                    switch (event.key) {
+                        case "ArrowLeft":
+                            if (playerPosition > 0)
+                                playerPosition -= velocity;
+                            console.log(playerPosition);
+                            break;
+                        case "ArrowRight":
+                            if (playerPosition < canvas.clientWidth)
+                                playerPosition += velocity;
+                            console.log(playerPosition);
+                    }
+                    event.preventDefault();
+                }, true);
+                requestAnimationFrame(() => {
+                    drawRectangle(playerPosition, canvas.clientHeight - 20, 20, 20, ctx)
+                });
+
+                const radius = 40;
+                const NUMBER_OF_STEPS = 5
+                const stepOffset = (canvas.clientHeight - radius * 2) / NUMBER_OF_STEPS;
+                var lastStepBorderX;
+                function drawStep(stepNumber) {
                     ctx.save();
                     ctx.beginPath();
-                    ctx.arc(canvas.clientWidth / 2, canvas.clientHeight / 2 , 40, 0, 2 * Math.PI);
-                    ctx.fillStyle= boolean ? "green" : "blue";
-                    boolean = !boolean;
+                    ctx.fillStyle = "red";
+                    ctx.fill();
+                    const calcOff = stepOffset * stepNumber;
+                    ctx.fillRect(
+                        calcOff,
+                        canvas.clientHeight - calcOff,
+                        canvas.clientWidth - calcOff,
+                        stepOffset);
+                    ctx.stroke();
+                    if (stepNumber < NUMBER_OF_STEPS) {
+                        setTimeout(() => {
+                            requestAnimationFrame(()=>{drawStep(stepNumber + 1)});
+                        }, 1000);
+                    } else {
+                        lastStepBorderX = calcOff;
+                        lastStepBorderY = canvas.clientHeight - calcOff;
+                        requestAnimationFrame(moveBall);
+                    }
+                        
+                }
+
+                function DrawStairs() {
+                    ctx.save();
+                    ctx.beginPath();
+                    ctx.fillStyle = "red";
+                    for (var i = 0; i < NUMBER_OF_STEPS + 1; ++i) {
+                        const calcOff = stepOffset * i;
+                        ctx.fillRect(
+                        calcOff,
+                        canvas.clientHeight - calcOff,
+                        canvas.clientWidth - calcOff,
+                        stepOffset);
+                    }
+                    ctx.stroke();
+                }
+
+                function drawBall(posX, posY) {
+                    ctx.save();
+                    ctx.beginPath();
+                    ctx.arc(posX, posY, radius, 0, 2 * Math.PI);
                     ctx.fill();
                     ctx.stroke();
                 }
-                setInterval(changeColor, 1000);
+
+                var ballPosX = canvas.clientWidth - radius, ballPosY = radius;
+                var moveForward = true;
+                function moveBall() {
+                    ctx.clearRect(0, 0, canvas.clientWidth, canvas.clientHeight);
+                    DrawStairs();
+                    drawBall(ballPosX, ballPosY);
+                    if (ballPosX + radius < lastStepBorderX) {
+                        moveForward = false;
+                        lastStepBorderX -= stepOffset;
+                        lastStepBorderY += stepOffset;
+                    }
+                    if (!moveForward && ballPosY + radius == lastStepBorderY) {
+                        moveForward = true;
+                    }
+                    if (moveForward)
+                        ballPosX -= 1;
+                    else
+                        ballPosY += 1;
+                    requestAnimationFrame(moveBall);
+                }                
             </script>
         </canvas>
     </body>
