--- a/lab4/index.html
+++ b/lab4/index.html
@@ -10,6 +10,7 @@
                     playerPositionY = canvas.clientHeight / 2;
                 const velocity = 5, playerSizeX = 20, playerSizeY = 40, road_width = 400;
                 const line_width = 10, road_pos = (canvas.clientWidth - road_width) / 2;
+                const line_height = 50;
                 var centerLinePos = 0;
 
                 function drawRoad(road_pos, road_width, ctx)
@@ -25,8 +26,14 @@
                 function drawCenterLine(line_width, ctx)
                 {
                     ctx.fillStyle = "white";
-                    ctx.fillRect((canvas.clientWidth - line_width) / 2, centerLinePos, line_width, line_width * 5);
-                    ctx.fillRect((canvas.clientWidth - line_width) / 2, centerLinePos + line_width * 6, line_width, line_width * 5);
+                    ctx.fillRect((canvas.clientWidth - line_width) / 2, centerLinePos % canvas.clientHeight, line_width, line_width * 5);
+                    ctx.fillRect((canvas.clientWidth - line_width) / 2, (centerLinePos + line_height * 2) % canvas.clientHeight, line_width, line_height);
+                    ctx.fillRect((canvas.clientWidth - line_width) / 2, (centerLinePos + line_height * 4) % canvas.clientHeight, line_width, line_height);
+                    ctx.fillRect((canvas.clientWidth - line_width) / 2, (centerLinePos + line_height * 6) % canvas.clientHeight, line_width, line_height);
+                    ctx.fillRect((canvas.clientWidth - line_width) / 2, (centerLinePos + line_height * 8) % canvas.clientHeight, line_width, line_height);
+                    ctx.fillRect((canvas.clientWidth - line_width) / 2, (centerLinePos + line_height * 10) % canvas.clientHeight, line_width, line_height);
+                    ctx.fillRect((canvas.clientWidth - line_width) / 2, (centerLinePos + line_height * 12) % canvas.clientHeight, line_width, line_height);
+                    ctx.fillRect((canvas.clientWidth - line_width) / 2, (centerLinePos + line_height * 14) % canvas.clientHeight, line_width, line_height);
                     centerLinePos++;
                     requestAnimationFrame(()=>{
                         drawCenterLine(line_width, ctx);
